vgc_add_library(ui
    THIRD_DEPENDENCIES
        ${VGC_QT_GUI}
        ${VGC_QT_OPENGL}

    VGC_DEPENDENCIES
        graphics
        dom
        workspace

    MACOS_DEPENDENCIES
        "-framework ApplicationServices"

    CPP_HEADER_FILES
        action.h
        actiongroup.h
        api.h
        application.h
        button.h
        canvas.h
        canvastool.h
        colorpalette.h
        column.h
        cursor.h
        dialog.h
        event.h
        exceptions.h
        flex.h
        grid.h
        imagebox.h
        key.h
        keyevent.h
        label.h
        lineedit.h
        logcategories.h
        macospermissions.h
        margins.h
        menu.h
        menubutton.h
        messagedialog.h
        modifierkey.h
        mouseevent.h
        numberedit.h
        overlayarea.h
        panel.h
        panelarea.h
        panelstack.h
        paneltabs.h
        plot2d.h
        popuplayer.h
        preferredsizecalculator.h
        qtutil.h
        row.h
        settings.h
        shortcut.h
        sketchtool.h
        strings.h
        widget.h
        window.h

        detail/layoututil.h
        detail/paintutil.h
        detail/qopenglengine.h

    CPP_SOURCE_FILES
        action.cpp
        actiongroup.cpp
        application.cpp
        button.cpp
        canvas.cpp
        canvastool.cpp
        colorpalette.cpp
        column.cpp
        cursor.cpp
        dialog.cpp
        event.cpp
        exceptions.cpp
        flex.cpp
        grid.cpp
        imagebox.cpp
        key.cpp
        keyevent.cpp
        label.cpp
        lineedit.cpp
        logcategories.cpp
        margins.cpp
        menu.cpp
        menubutton.cpp
        messagedialog.cpp
        modifierkey.cpp
        mouseevent.cpp
        numberedit.cpp
        overlayarea.cpp
        panel.cpp
        panelarea.cpp
        panelstack.cpp
        paneltabs.cpp
        plot2d.cpp
        popuplayer.cpp
        preferredsizecalculator.cpp
        qtutil.cpp
        row.cpp
        settings.cpp
        shortcut.cpp
        sketchtool.cpp
        strings.cpp
        widget.cpp
        window.cpp

        detail/paintutil.cpp
        detail/qopenglengine.cpp

    OBJCPP_SOURCE_FILES
        macospermissions.mm

    RESOURCE_FILES
        stylesheets/default.vgcss
)

add_subdirectory(wraps)
add_subdirectory(tests)
